# journal-bubbles

./: .gitignore  Cargo.toml
bubbles-cli/: Cargo.toml  index.html
bubbles-cli/src/: main.rs
bubbles-core/: Cargo.toml
bubbles-core/src/: bubble.rs  lib.rs  status.rs  web.rs
bubbles-gui/: Cargo.toml  Trunk.toml  index.html
bubbles-gui/src/: main.rs
bubbles-server/: Cargo.toml
bubbles-server/src/: main.rs
src/: main.rs
