[package]
name = "bubbles-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bubbles-core = {path = "../bubbles-core"}
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0.93"
tabled = "0.10.0"
