[package]
name = "bubbles-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bubbles-core = {path = "../bubbles-core"}
iced = "0.9.0"
getrandom = {version="*", features=["js"]}
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0.103"
anyhow = "1.0.72"
